fdo#73617 sc: Don't update the gui during live preview

Apart from (apparently) being not necessary, it creates
bugs like this one. If the selection consist of multiple
fonts, it leads to clearing the font name box, which in
turn leads to scrolling the list up.

(cherry picked from commit 6ba8b7f5eacac969e4781d63718083a05491b1bc)

Conflicts:
	sc/source/ui/view/viewfunc.cxx

Change-Id: I8e702b9b4d4a1f7ad1ded5de1a5e162f039f6d4d