sc/source/ui/view/viewfunc.cxx
@@ -2920,7 +2920,6 @@ void ScViewFunc::UpdateSelectionArea( const ScMarkData& rSel, ScPatternAttr* pAt
         nEndCol,   nEndRow,   nEndTab,
         PAINT_GRID, nExtFlags | SC_PF_TESTMERGE );
     ScTabViewShell* pTabViewShell = GetViewData()->GetViewShell();
-    pTabViewShell->CellContentChanged();
     pTabViewShell->AdjustBlockHeight(false, const_cast<ScMarkData*>(&rSel));
 }
 
